<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="avidos.autok.activity.SecondPageDocumentationFragment"
    android:background="@android:color/transparent">

    <EditText
        android:id="@+id/edittext_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:layout_widthPercent="80%"
        app:layout_marginTopPercent="5%"
        android:textSize="14sp"
        android:hint="@string/hint_destination"
        android:theme="@style/EditTextHintBlack"
        android:textColor="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/edittext_timeofuse"
        android:layout_below="@+id/edittext_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:layout_widthPercent="80%"
        android:textSize="14sp"
        android:hint="@string/hint_timeofuse"
        android:theme="@style/EditTextHintBlack"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/assurance_subtitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/edittext_timeofuse"
        app:layout_marginTopPercent="5%"
        app:layout_heightPercent="5%"
        android:textColor="@color/colorAppGrayText"
        android:textSize="21sp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/subtitle_assurance" />

    <EditText
        android:id="@+id/edittext_assurance"
        android:layout_below="@+id/assurance_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_marginTopPercent="5%"
        android:layout_centerHorizontal="true"
        app:layout_widthPercent="80%"
        android:textSize="14sp"
        android:hint="@string/hint_assurance"
        android:theme="@style/EditTextHintBlack"
        android:textColor="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/edittext_policenumber"
        android:layout_below="@+id/edittext_assurance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:layout_widthPercent="80%"
        android:textSize="14sp"
        android:hint="@string/hint_policenumber"
        android:theme="@style/EditTextHintBlack"
        android:textColor="@color/colorPrimaryDark"
        android:inputType="number" />

    <EditText
        android:id="@+id/edittext_expiration"
        android:layout_below="@+id/edittext_policenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:layout_widthPercent="80%"
        android:textSize="14sp"
        android:hint="@string/hint_expiration"
        android:theme="@style/EditTextHintBlack"
        android:textColor="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/edittext_telephone"
        android:layout_below="@+id/edittext_expiration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:layout_widthPercent="80%"
        android:textSize="14sp"
        android:hint="@string/hint_telephone"
        android:theme="@style/EditTextHintBlack"
        android:textColor="@color/colorPrimaryDark"
        android:inputType="phone" />

    <Button
        android:id="@+id/finish_button"
        android:layout_below="@id/edittext_telephone"
        style="?android:textAppearanceSmall"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_border_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_marginTopPercent="10%"
        app:layout_widthPercent="75%"
        app:layout_heightPercent="10%"
        android:text="@string/action_finish"
        android:textStyle="bold"/>

</android.support.percent.PercentRelativeLayout>
