<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="avidos.autok.activity.ProfileFragment"
    android:background="@drawable/background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/profile_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center"
        android:textSize="21sp"
        android:textColor="@color/colorAppWhiteText"
        android:background="@color/colorAppOrange"
        android:textStyle="bold"
        android:text="@string/title_profile" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:src="@drawable/foto" />

            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"
                android:text="@string/profile_name"
                android:textColor="@color/colorAppOrange"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:theme="@style/EditTextHintBlack" />

            <TextView
                android:id="@+id/user_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"
                android:text="@string/profile_username"
                android:textColor="@color/colorAppOrange"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:theme="@style/EditTextHintBlack" />

            <TextView
                android:id="@+id/phone_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"
                android:text="@string/profile_phone"
                android:textColor="@color/colorAppOrange"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:theme="@style/EditTextHintBlack" />

            <Button
                android:id="@+id/reset_button"
                style="?android:textAppearanceMedium"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/rounded_border_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_reset_password"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/cancel_button"
                style="?android:textAppearanceMedium"
                android:background="@drawable/rounded_border"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/action_cancel"
                android:textStyle="bold"
                android:enabled="false"/>

            <Button
                android:id="@+id/update_button"
                style="?android:textAppearanceMedium"
                android:background="@drawable/rounded_border_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/action_update"
                android:textStyle="bold"
                android:enabled="false"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
